# objd

./: README.rst  pyproject.toml  setup.py
.github/workflows/: bandit.yml
mods/: irc.py  mod.py  rss.py
mymod/: mbx.py  mdl.py  rst.py  wsd.py
objd/: __init__.py  flt.py  iface.py  irc.py  tmr.py
objd/modules/: __init__.py  cmd.py  err.py  flt.py  fnd.py  irc.py  log.py  opm.py  rss.py  tdo.py  tmr.py  udp.py
objr/: __init__.py  broker.py  client.py  command.py  disk.py  handler.py  objects.py  persist.py  repeats.py  threads.py  utils.py
objx/: object.py
tests/: test_github.py  test_hackernews.py  test_mixin.py  test_object.py  test_opml.py
