[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "objd"
description = "object daemon"
version = "12"
authors = [
    {name = "Bart Thate",email = "bthate@dds.nl"},
]
readme = "README.rst"
license = {text="Public Domain"}
dependencies = [
    'objx',
    'objr'
]
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]

[project.urls]
"home" = "https://pypi.org/project/objd"
"bugs" = "https://github.com/xobjectz/objd/issues"
"source" = "https://github.com/xobjectz/objd"

[tool.setuptools]
script-files = [
    'bin/objctl',
    'bin/objd',
]
packages = [
    'objd',
    'objd.modules'
]


zip-safe=true
